# Unemployed---RAG-Pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/unemployed_rag_pipeline/: __init__.py  config.py  indexing.py  main.py
src/unemployed_rag_pipeline/embedding/: __init__.py  embedder.py
src/unemployed_rag_pipeline/ingestion/: __init__.py  pipeline.py
src/unemployed_rag_pipeline/retrieval/: __init__.py  keyword.py  semantic.py
